# project4llm

./: .dockerignore  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  target.md
.github/workflows/: production-rag-images.yml
notes/: 00-weekly-checklist.md  01-pytorch-training-loop.md  02-tokenizer-and-causal-lm.md  03-transformer-decoder.md  04-finetuning-lora-dpo.md  05-model-architecture-comparison.md  06-experiment-report-template.md  07-curriculum-audit.md  08-milvus-vector-retrieval-for-rag.md
projects/01-ml-basics/: README.md  train_mlp.py
projects/02-transformer-from-scratch/: README.md  benchmark_kv_cache.py  generated_sample.txt  model.py  model_write_outline.md  smoke_test.py  train_tiny_gpt.py
projects/03-tokenizer-and-data/: README.md  clean_sft.jsonl  data_pipeline.py  packed_token_ids.jsonl  raw_sft.jsonl  tiny_bpe_tokenizer.json  tiny_corpus.txt  train_bpe_tokenizer.py
projects/04-sft-qwen-lora/: README.md  build_sft_dataset.py  tiny_sft.jsonl
projects/05-dpo-preference/: README.md  build_preference_dataset.py  tiny_preference.jsonl
projects/06-open-source-reading/: README.md
projects/07-milvus-rag/: README.md  milvus_lite_rag_demo.py
projects/08-industrial-rag/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  answer.py  answer_multimodal.py  benchmark_latency.py  build_eval_from_feedback.py  check_config.py  delete_document.py  diagnose_context.py  diagnose_retrieval.py  docker-compose.yml  download_models.py  eval_answer.py  eval_retrieval.py  rerank.py  (+60 more)
(+295 files in other folders)
