[project]
name = "practice4llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "fastapi>=0.136.3",
    "modelscope>=1.37.1",
    "openai>=2.40.0",
    "peft>=0.19.1",
    "pymilvus[milvus-lite]>=3.0.0",
    "pypdf>=6.12.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=2.7.0",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "trl>=1.5.1",
    "uvicorn>=0.48.0",
]
